--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - pip install mbed-cli
   - mbed deploy
   - find . -type d
-  - toolchain_install.sh
+  - ./toolchain_install.sh
 
 script:
   - find . -type d
