--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,29 @@
 language: python
 python:
-  - "3.6"
-
+- '3.6'
 env:
   global:
-    - TC_HOME=$HOME/tc
-    - MBED_BUILD_TIMESTAMP=42
-
+  - TC_HOME=$HOME/tc
+  - MBED_BUILD_TIMESTAMP=42
 matrix:
   include:
-   - os: linux
-     env: MBED_CLOUD=1.5.0 ARMGCC_VERSION=6.3.1
-   - os: linux
-     env: MBED_CLOUD=2.0.1.1 ARMGCC_VERSION=6.3.1
-   - os: linux
-     env: MBED_CLOUD=2.0.1.1 ARMGCC_VERSION=7.3.1
-
+  - os: linux
+    env: MBED_CLOUD=1.5.0 ARMGCC_VERSION=6.3.1
+  - os: linux
+    env: MBED_CLOUD=2.0.1.1 ARMGCC_VERSION=6.3.1
+  - os: linux
+    env: MBED_CLOUD=2.0.1.1 ARMGCC_VERSION=7.3.1
 before_install:
-  - pip install -U pip wheel
-  - pip install mbed-cli
-  - mbed deploy
-  - ./toolchain_install.sh
-
+- pip install -U pip wheel
+- pip install mbed-cli
+- mbed deploy
+- "./toolchain_install.sh"
 script:
-  - . ./mbed-cloud-build.sh && cloudbuild cloud_client ${MBED_CLOUD}
-
+- ". ./mbed-cloud-build.sh && cloudbuild cloud_client ${MBED_CLOUD}"
 cache:
   directories:
-    - ${TC_HOME}
-    - ${HOME}/.mbed/mbed-cache
-
+  - "${TC_HOME}"
+  - "${HOME}/.mbed/mbed-cache"
 deploy:
   skip_cleanup: true
   provider: releases
