--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ deploy:
   on:
     all_branches: true
     tags: false
-    condition: $TRAVIS_PULL_REQUEST == "false"
+    condition: $TRAVIS_PULL_REQUEST == "false" && MBED_CLOUD~=5
