--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ deploy:
   file: cloud_client/BUILD/**/*
   api_key: ${GITHUB_TOKEN}
   on:
-    all_branches: true
-    tags: false
+    all_branches: false
+    tags: true
     condition: $TRAVIS_PULL_REQUEST == "false" && $MBED_CLOUD =~ 1.5
