--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,6 @@ deploy:
   file: cloud_client/BUILD/**/*
   api_key: ${GITHUB_TOKEN}
   on:
-    all_branches: true
-    tags: false
+    all_branches: false
+    tags: true
     condition: $TRAVIS_PULL_REQUEST == "false"
