--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
 before_install:
 - pip install -U pip wheel
 - pip install mbed-cli
-#- mbed deploy
+- mbed deploy
 #- "./toolchain_install.sh"
 script:
 - ". ./mbed-cloud-build.sh && cloudbuild ${BUILD_DIR} ${MBED_CLOUD}"
