--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ matrix:
 before_install:
 - pip install -U pip wheel
 - pip install mbed-cli
-#- mbed deploy
-#- "./toolchain_install.sh"
+- mbed deploy
+- "./toolchain_install.sh"
 script:
 - ". ./mbed-cloud-build.sh && cloudbuild ${BUILD_DIR} ${MBED_CLOUD}"
 cache:
